fixed overflow x for mobile

--- a/css/projects.css
+++ b/css/projects.css
@@ -10,8 +10,7 @@
 }
 .project-wrapper__info {
     letter-spacing: 0.08rem;
-    width: 100%;
-    margin: 0 10%;
+    padding: 0 10%;
     font-size: 0.95rem;
     line-height: 30px;
     color: black;
@@ -82,8 +81,7 @@
 
 @media only screen and (min-width: 960px) {
     .project-wrapper__info {
-        /* margin-left: 2%; */
-        width: 100%;
+        width: 100vw;
         padding: 0;
         margin: 0;
         font-size: 1.1rem;
