--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,10 @@ body, html {
     color: #cdcdcd;
     font-family: 'Montserrat', sans-serif;
     letter-spacing: 0.5rem; 
-    min-width: 100%;
-    max-width: 100%;
-    width: 100%;
+    min-width: 100vw;
+    max-width: 100vw;
+    width: 100vw;
+    overflow-x: hidden; 
 }
 a {
     text-decoration: none;
